challenge page overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,3 @@
-/*----------------------------------------------------
-@File: Default Styles
-@Author: Rocky
-@URL: http://wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-This file contains the styling for the actual theme, this
-is the file you need to edit to change the look of the
-theme.
----------------------------------------------------- */
-/*=====================================================================
-@Template Name: Royal Hotel
-@Author: Rocky
-@Developed By: Rocky
-@Developer URL: http://rocky.wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-@Default Styles
-
-Table of Content:
-01/ Variables
-02/ predefin
-03/ header
-04/ button
-05/ banner
-06/ breadcrumb
-07/ about
-08/ team
-09/ project 
-10/ price 
-11/ team 
-12/ blog 
-13/ video  
-14/ features  
-15/ career  
-16/ contact 
-17/ footer
-
-=====================================================================*/
 /*----------------------------------------------------*/
 /*font Variables*/
 /*Color Variables*/
@@ -3742,14 +3703,12 @@ padding-top: 90px;
 color: #000;
 }
 .notyet{
-  position: relative;
   height: 350px;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .noone {
-  position: relative;
-  top: 30%;
-  left: 50%;
-  transform: translate(-40%,-50%);
   font-size: 3em;
 }
